--- a/src/main/resources/css/home.css
+++ b/src/main/resources/css/home.css
@@ -1,6 +1,6 @@
 /*左侧*/
 .aside{
-    -fx-pref-width: 280px;
+    -fx-pref-width: 260px;
     -fx-background-color: rgb(243,243,243);
 }
 .top{
@@ -31,23 +31,43 @@
     -fx-icon-size: 20px;
     -fx-icon-color: text-color;
 }
+.top > .bell-label:hover > .ikonli-font-icon,
+.top > .user-menu:hover > .ikonli-font-icon{
+    -fx-icon-color: primary-color;
+}
+.bottom > .logout-label:hover{
+    -fx-text-fill: danger-color;
+}
+.bottom > .logout-label:hover > .ikonli-font-icon{
+    -fx-icon-color: danger-color;
+}
 .menu{
-    -fx-font-size:14px;
-    -fx-font-weight:600;
-    -fx-text-fill:text-color;
     -fx-background-insets: 0px;
     -fx-background-color:transparent;
-    -fx-padding:5px 5px 5px 5px;
+    -fx-padding:5px 0px 5px 0px;
     -fx-border-color: border-color transparent border-color transparent;
 }
-.menu-item{
-    -fx-spacing: 10px;
-    -fx-alignment: center-left;
+.menu .scroll-bar{
+    -fx-opacity:0;
 }
-.menu-item > .i-label{
-    -fx-pref-height: 30px;
-    -fx-pref-width: 3px;
-    -fx-background-radius: 2px;
+.menu:hover .scroll-bar{
+    -fx-opacity:1;
+}
+.menu-item{
+    -fx-spacing: 15px;
+    -fx-alignment: center-left;
+    -fx-padding: 10px 5px 10px 20px;
+    -fx-border-width: 0 0 0 5px;
+    -fx-border-color: transparent transparent transparent transparent;
+}
+.menu-item > .icon-label > .ikonli-font-icon{
+    -fx-icon-color: text-color;
+    -fx-icon-size: 18px;
+}
+.menu-item > .name-label{
+    -fx-font-size:15px;
+    -fx-font-weight:700;
+    -fx-text-fill:text-color;
 }
 .menu .cell.indexed-cell.list-cell{
     -fx-background-color:transparent;
@@ -56,12 +76,18 @@
 .menu .cell.indexed-cell.list-cell:empty:hover{
     -fx-background-color:transparent;
 }
-.menu .cell.indexed-cell.list-cell:hover{}
-.menu .cell.indexed-cell.list-cell:selected .menu-item > .i-label{
-    -fx-background-color: primary-color;
+.menu .cell.indexed-cell.list-cell:hover,
+.menu .cell.indexed-cell.list-cell:selected{
+    -fx-background-color: rgba(0,0,0,0.05);
 }
-.menu .cell.indexed-cell.list-cell:selected .menu-item > .text-label{
+.menu .cell.indexed-cell.list-cell:selected .menu-item{
+    -fx-border-color: transparent transparent transparent primary-color;
+}
+.menu .cell.indexed-cell.list-cell:selected .name-label{
     -fx-text-fill: primary-color;
+}
+.menu .cell.indexed-cell.list-cell:selected .icon-label > .ikonli-font-icon{
+    -fx-icon-color: primary-color;
 }
 /*主要内容*/
 .main{
