--- a/src/main/resources/css/home.css
+++ b/src/main/resources/css/home.css
@@ -1,6 +1,6 @@
-/*左侧*/
 .home{
 }
+/*左侧*/
 .aside{
     -fx-pref-width: 260px;
     -fx-background-color: rgb(243,243,243);
@@ -91,6 +91,28 @@
     -fx-text-fill: primary-color;
 }
 .menu .cell.indexed-cell.list-cell:selected .icon-label > .ikonli-font-icon{
+    -fx-icon-color: primary-color;
+}
+/*顶部*/
+.header{
+    -fx-padding: 10px 20px 10px 20px;
+    -fx-alignment: center-left;
+    -fx-border-color: transparent transparent border-color transparent;
+    -fx-border-width: 0 0 1px 0;
+}
+.header > .title-label{
+    -fx-font-size:15px;
+    -fx-font-weight:700;
+    -fx-text-fill:text-color;
+}
+.header > .msg-label{
+    -fx-pref-height: 20px;
+    -fx-font-size: 13px;
+    -fx-text-fill: primary-color;
+    -fx-alignment: center-right;
+}
+.header > .msg-label > .ikonli-font-icon{
+    -fx-icon-size: 18px;
     -fx-icon-color: primary-color;
 }
 /*主要内容*/
