--- a/src/main/resources/css/base.css
+++ b/src/main/resources/css/base.css
@@ -68,37 +68,37 @@
 .cf-table-view{
     -fx-background-insets: 0;
     -fx-padding:0px;
-    -fx-border-color: border-color;
-    -fx-border-width: 1px;
-    -fx-font-size: 14px;
-    -fx-border-radius: 3px;
-    -fx-background-radius: 3px;
+    -fx-border-width: 1;
+    -fx-border-color:border-color;
     -fx-background-color: transparent;
 }
 .cf-table-view > .column-header-background{
-    /*-fx-background-color: transparent;*/
-    -fx-background-color:rgba(0,0,0,0.05);
+    -fx-background-color: transparent;
+    -fx-border-width: 0 0 1px 0;
+    -fx-border-color: border-color;
 }
 .cf-table-view .column-header{
     -fx-background-color: transparent;
     -fx-pref-height:36px;
-    -fx-border-width: 0 1px 1px 0;
-    -fx-border-color:border-color;
+    -fx-border-width: 0;
+    -fx-padding: 0 10px 0 10px;
 }
 .cf-table-view .column-header:last-visible{
-    -fx-border-width: 0 0px 1px 0;
+    -fx-border-width: 0;
 }
 .cf-table-view .column-header .label {
     -fx-alignment: center-left;
-    -fx-text-fill: text-color;
-    -fx-padding: 0 10px 0 10px;
+    -fx-text-fill: rgb(144, 147, 153);
+    -fx-font-size: 15px;
 }
 .cf-table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected,
 .cf-table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:hover{
-    -fx-background-color: derive(primary-color,90%);
+    -fx-background-color: rgba(0,0,0,0.07);
 }
+.table-view > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled > .table-cell,
 .table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected > .table-cell{
     -fx-text-fill: text-color;
+    -fx-font-size: 14px;
 }
 .cf-table-view .table-row-cell {
     -fx-min-height:36px;
@@ -107,19 +107,15 @@
     -fx-border-color:border-color;
 }
 .cf-table-view .table-cell {
-    -fx-border-width: 0 1px 0 0;
-    -fx-border-color:border-color;
+    -fx-border-width: 0;
     -fx-alignment: center-left;
     -fx-padding: 0 10px 0 10px;
 }
-.cf-table-view .table-cell:last-visible{
-    -fx-border-width: 0;
-}
 .cf-table-view .table-row-cell:even {
-    -fx-background-color: transparent;
+    -fx-background-color: rgba(0,0,0,0.03);
 }
 .cf-table-view .table-row-cell:odd {
-    -fx-background-color: rgba(0,0,0,0.02);
+    -fx-background-color: transparent;
 }
 .cf-table-view .table-cell:empty {
     -fx-border-width: 0px;
