--- a/src/main/resources/css/home.css
+++ b/src/main/resources/css/home.css
@@ -1,4 +1,6 @@
 .home{
+    -fx-border-width: 1px 0 0 0;
+    -fx-border-color: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #fc8bffff 0.0%, #2bd4fdff 50.0%, #2dff89ff 100.0%);
 }
 /*左侧*/
 .aside{
