--- a/src/main/resources/css/core.css
+++ b/src/main/resources/css/core.css
@@ -1,11 +1,11 @@
 /*********************************** 配色 ***********************************/
 .root{
 
-    primary-color:#5C80EF;
-    success-color:#33C437;
-    info-color:#68C0FF;
-    warn-color:#FFDC42;
-    danger-color:#FF4B3A;
+    primary-color:#409EFF;
+    success-color:#67C23A;
+    info-color:#909399;
+    warn-color:#E6A23C;
+    danger-color:#F56C6C;
 
     text-color:#303133;
     border-color:#D4D7DE;
@@ -34,22 +34,18 @@
 .cf-but.info{-fx-background-color: info-color;}
 .cf-but.warn{-fx-background-color: warn-color;}
 .cf-but.danger{-fx-background-color: danger-color;}
-/*hover:*/
-.cf-but.primary:hover{-fx-background-color: derive(primary-color,30%);}
-.cf-but.success:hover{-fx-background-color: derive(success-color,30%);}
-.cf-but.info:hover{-fx-background-color: derive(info-color,30%);}
-.cf-but.warn:hover{-fx-background-color: derive(warn-color,30%);}
-.cf-but.danger:hover{-fx-background-color: derive(danger-color,30%);}
+/*hover:*/ /*focused:*/
+.cf-but.primary:hover, .cf-but.primary:focused{-fx-background-color: derive(primary-color,30%);}
+.cf-but.success:hover, .cf-but.success:focused{-fx-background-color: derive(success-color,30%);}
+.cf-but.info:hover, .cf-but.info:focused{-fx-background-color: derive(info-color,30%);}
+.cf-but.warn:hover, .cf-but.warn:focused{-fx-background-color: derive(warn-color,30%);}
+.cf-but.danger:hover, .cf-but.danger:focused{-fx-background-color: derive(danger-color,30%);}
 /*pressed:*/
 .cf-but.primary:pressed{-fx-background-color: derive(primary-color,-10%);}
 .cf-but.success:pressed{-fx-background-color: derive(success-color,-10%);}
 .cf-but.info:pressed{-fx-background-color: derive(info-color,-10%);}
 .cf-but.warn:pressed{-fx-background-color: derive(warn-color,-10%);}
 .cf-but.danger:pressed{-fx-background-color: derive(danger-color,-10%);}
-/*focused:*/
-.cf-but:focused{
-    /*-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.7), 5.0,0, 0, 1);*/
-}
 /*圆角按钮*/
 .cf-but.round{
     -fx-border-radius: 16px;
@@ -59,29 +55,35 @@
 .cf-but.plain{
     -fx-background-color: transparent;
 }
-.cf-but.primary.plain{-fx-border-color: primary-color;-fx-text-fill: primary-color;}
-.cf-but.success.plain{-fx-border-color: success-color;-fx-text-fill: success-color;}
-.cf-but.info.plain{-fx-border-color: info-color;-fx-text-fill: info-color;}
-.cf-but.warn.plain{-fx-border-color: warn-color;-fx-text-fill: warn-color;}
-.cf-but.danger.plain{-fx-border-color: danger-color;-fx-text-fill: danger-color;}
+.cf-but.primary.plain{-fx-border-color: primary-color;-fx-text-fill: primary-color;-fx-background-color: derive(primary-color,95%);}
+.cf-but.success.plain{-fx-border-color: success-color;-fx-text-fill: success-color;-fx-background-color: derive(success-color,95%);}
+.cf-but.info.plain{-fx-border-color: info-color;-fx-text-fill: info-color;-fx-background-color: derive(info-color,95%);}
+.cf-but.warn.plain{-fx-border-color: warn-color;-fx-text-fill: warn-color;-fx-background-color: derive(warn-color,95%);}
+.cf-but.danger.plain{-fx-border-color: danger-color;-fx-text-fill: danger-color;-fx-background-color: derive(danger-color,95%);}
 
-.cf-but.primary.plain:hover,
-.cf-but.primary.plain:focused{-fx-background-color: primary-color;-fx-text-fill: rgb(255,255,255);}
-.cf-but.success.plain:hover,
-.cf-but.success.plain:focused{-fx-background-color: success-color;-fx-text-fill: rgb(255,255,255);}
-.cf-but.info.plain:hover,
-.cf-but.info.plain:focused{-fx-background-color: info-color;-fx-text-fill: rgb(255,255,255);}
-.cf-but.warn.plain:hover,
-.cf-but.warn.plain:focused{-fx-background-color: warn-color;-fx-text-fill: rgb(255,255,255);}
-.cf-but.danger.plain:hover,
-.cf-but.danger.plain:focused{-fx-background-color: danger-color;-fx-text-fill: rgb(255,255,255);}
+.cf-but.primary.plain > .ikonli-font-icon{-fx-icon-color: primary-color;}
+.cf-but.success.plain > .ikonli-font-icon{-fx-icon-color: success-color;}
+.cf-but.info.plain > .ikonli-font-icon{-fx-icon-color: info-color;}
+.cf-but.warn.plain > .ikonli-font-icon{-fx-icon-color: warn-color;}
+.cf-but.danger.plain > .ikonli-font-icon{-fx-icon-color: danger-color;}
+
+.cf-but.primary.plain:hover > .ikonli-font-icon, .cf-but.primary.plain:focused > .ikonli-font-icon{-fx-icon-color: rgb(255,255,255);}
+.cf-but.success.plain:hover > .ikonli-font-icon, .cf-but.success.plain:focused > .ikonli-font-icon{-fx-icon-color: rgb(255,255,255);}
+.cf-but.info.plain:hover > .ikonli-font-icon, .cf-but.info.plain:focused > .ikonli-font-icon{-fx-icon-color: rgb(255,255,255);}
+.cf-but.warn.plain:hover > .ikonli-font-icon, .cf-but.warn.plain:focused > .ikonli-font-icon{-fx-icon-color: rgb(255,255,255);}
+.cf-but.danger.plain:hover > .ikonli-font-icon, .cf-but.danger.plain:focused > .ikonli-font-icon{-fx-icon-color: rgb(255,255,255);}
+
+.cf-but.primary.plain:hover, .cf-but.primary.plain:focused{-fx-background-color: primary-color;-fx-text-fill: rgb(255,255,255);}
+.cf-but.success.plain:hover, .cf-but.success.plain:focused{-fx-background-color: success-color;-fx-text-fill: rgb(255,255,255);}
+.cf-but.info.plain:hover, .cf-but.info.plain:focused{-fx-background-color: info-color;-fx-text-fill: rgb(255,255,255);}
+.cf-but.warn.plain:hover, .cf-but.warn.plain:focused{-fx-background-color: warn-color;-fx-text-fill: rgb(255,255,255);}
+.cf-but.danger.plain:hover, .cf-but.danger.plain:focused{-fx-background-color: danger-color;-fx-text-fill: rgb(255,255,255);}
 
 .cf-but.primary.plain:pressed{-fx-background-color: derive(primary-color,-10%);}
 .cf-but.success.plain:pressed{-fx-background-color: derive(success-color,-10%);}
 .cf-but.info.plain:pressed{-fx-background-color: derive(info-color,-10%);}
 .cf-but.warn.plain:pressed{-fx-background-color: derive(warn-color,-10%);}
 .cf-but.danger.plain:pressed{-fx-background-color: derive(danger-color,-10%);}
-
 
 /***********************************ScrollBar***********************************/
 .scroll-bar-style{
