--- a/src/main/resources/css/cf-colors.css
+++ b/src/main/resources/css/cf-colors.css
@@ -8,6 +8,6 @@
     -cf-danger-color:#F56C6C;
 
     -cf-text-color:#303133;
-    -cf-border-color:#D4D7DE;
+    -cf-border-color:#CDD0D6;
     -cf-base-color:#F2F3F5;
 }
