--- a/src/main/resources/css/cf-base.css
+++ b/src/main/resources/css/cf-base.css
@@ -73,3 +73,51 @@
     -fx-background-color: -cf-text-color;
     -fx-text-fill:rgb(255,255,255);
 }
+
+/* 滚动条样式 */
+.scroll-bar-style{
+    -fx-background-color: transparent;
+}
+.scroll-bar-style > .viewport{
+    -fx-background-color: transparent;
+}
+.scroll-bar-style .scroll-bar{
+    /*-fx-block-increment:10000;*/
+    -fx-unit-increment:20;
+    -fx-background-color: transparent;
+}
+.scroll-bar-style .scroll-bar > .decrement-button > .decrement-arrow,
+.scroll-bar-style .scroll-bar > .increment-button > .increment-arrow{
+    -fx-background-color: transparent;
+}
+.scroll-bar-style .scroll-bar:vertical > .decrement-button,
+.scroll-bar-style .scroll-bar:vertical > .increment-button{
+    -fx-pref-height:0px;
+    -fx-pref-width:0.01px;
+}
+.scroll-bar-style .scroll-bar:horizontal > .decrement-button,
+.scroll-bar-style .scroll-bar:horizontal > .increment-button{
+    -fx-pref-width:0px;
+    -fx-pref-height:0.01px;
+}
+.scroll-bar-style .scroll-bar > .track{
+    -fx-background-radius: 0px;
+    -fx-background-color: transparent;
+}
+.scroll-bar-style .scroll-bar:vertical > .thumb, .scroll-bar-style .scroll-bar:horizontal > .thumb{
+    -fx-background-color: rgba(0,0,0,0.2);
+    -fx-background-insets: 0px;
+    -fx-background-radius: 3px;
+}
+.scroll-bar-style .scroll-bar:vertical{
+    -fx-padding:6px 0px 6px 0px;
+}
+.scroll-bar-style .scroll-bar:horizontal{
+    -fx-padding:0px 6px 0px 6px;
+}
+.scroll-bar-style .scroll-bar:vertical > .thumb,.scroll-bar-style .scroll-bar:vertical > .track{
+    -fx-background-insets: 0px 0px 0px -6px;
+}
+.scroll-bar-style .scroll-bar:horizontal > .thumb,.scroll-bar-style .scroll-bar:horizontal > .track{
+    -fx-background-insets: -6px 0px 0px 0px;
+}
