--- a/src/main/resources/css/cf-header.css
+++ b/src/main/resources/css/cf-header.css
@@ -2,6 +2,9 @@
 .cf-header{
     -fx-padding: 5px;
     -fx-spacing: 5px;
+    -fx-background-color: #EBEDF0;
+/*    -fx-border-color: -cf-border-color;
+    -fx-border-width: 0 0 1px 0;*/
 }
 .cf-header > .iconified-but,
 .cf-header > .maximize-but,
