--- a/src/main/resources/css/project/home.css
+++ b/src/main/resources/css/project/home.css
@@ -1,7 +1,8 @@
 
 .aside{
     -fx-pref-width: 250px;
-    -fx-background-color: #EBEDF0;
+    -fx-border-width: 0 1px 0 0;
+    -fx-border-color: -cf-border-color;
 }
 /*导航栏Item样式*/
 .nav-item{
